# pluckwork

./: Dockerfile  alembic.ini  pluckwork.db  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 91a2d26342cb_add_timestamps.py  9417b0cfb6ab_create_tasks_table.py
pluckwork/: server.py  types.py
src/pluckwork/: client.py  server.py
