[project]
name = "pluckwork"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Koski",email = "maccam912@gmail.com"},
]
dependencies = [
    "pydantic>=2.5.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
server = [
    "litestar>=2.4.5",
    "uvicorn>=0.25.0",
    "sqlalchemy>=2.0.24",
    "alembic>=1.13.1",
]
client = [
    "httpx>=0.26.0",
]

[tool.pdm.scripts]
serve = "uvicorn pluckwork.server:app --host 0.0.0.0 --port 8080"
